# kirciuokle

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.base.json  tsconfig.client.json  tsconfig.json  tsconfig.test.json  vite.config.ts  wrangler.jsonc
.claude/: launch.json
ATTRIBUTIONS/: README.md
bundled_weights_pilot/: README.md  app.js  i18n.js  index.html  memtest.mjs  prepare_model.py  serve.py  styles.css
docs/: ACCENTUATOR.md  ARCHITECTURES.md  DATASETS.md  EVALUATION.md  GLOSSARY.md  PLAN-open-accentuator.md  README.md  RETRAIN.md  SPEC.md  SPEC10.md  SPEC11.md  SPEC12.md  SPEC13.md  SPEC14.md  SPEC15.md  SPEC16.md  SPEC17.md  SPEC18.md  SPEC19.md  SPEC2.md  SPEC20.md  SPEC21.md  SPEC22.md  SPEC23.md  SPEC24.md  SPEC25.md  SPEC26.md  SPEC27.md  SPEC28.md  SPEC29.md  SPEC3.md  SPEC30.md  SPEC31.md  SPEC32.md  SPEC33.md  SPEC34.md  SPEC35.md  SPEC36.md  SPEC37.md  SPEC38.md  (+30 more)
local/: README.md  docker-compose.udpipe2.yml  docker-compose.yml
local/app/: Dockerfile  pyproject.toml
local/app/kirciuokle/: __init__.py  accent.py  dictionary.py  dictionary_types.py  disambiguate.py  server.py  tagger.py  vdu.py
local/app/tests/: __init__.py  helpers.py  test_accent.py  test_dictionary.py  test_disambiguate.py  test_server.py
migrations/: 0001_words.sql  0002_default_forms.sql  0003_title_case.sql
public/: manifest.webmanifest  spellcheck-lt.txt  sw.js
scripts/: accent_text.py  bench_taggers.py  build_spellcheck_wordlist.py  check_spellcheck_assets.mjs  eval_accenter.py  export_dictionary.py  (+9 more)
(+131 files in other folders)
