[project]
name = "kirciuokle-local"
version = "0.1.0"
description = "Self-hosted local replica of the kirciuokle worker"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "python-multipart>=0.0.9",
  "regex>=2024.0",
  "uvicorn[standard]>=0.30",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
